syntax = "proto3";
package IntifaceGuiProtocol;

option csharp_namespace = "IntifaceCLI";

message DeviceMessageAttrs {
    map<string, string> msgs_attrs = 1;
}

message ServerControlMessage {
  message Stop {
  };

  message AddSimulatedDevice {
    string device_ident = 1;
    string device_name = 2;
    map<string, DeviceMessageAttrs> device_msgs = 3;
  }

  message RemoveSimulatedDevice {
    string device_ident = 1;
  }

  message SimulatedDeviceMsgIn {
    string device_ident = 1;
    string json_msg = 2;
  }

  oneof msg {
    Stop stop = 1;
    AddSimulatedDevice add_simulated_device = 2;
    RemoveSimulatedDevice remove_simulated_device = 3;
    SimulatedDeviceMsgIn simulated_device_msg_in = 4;
  }
}

// This needs to stay in sync with the Intiface protocols.
message ServerProcessMessage {
  // Status messages from the server process
  message ProcessLog {
    string message = 1;
  };

  // Notifies frontend that server process is up and running
  message ProcessStarted {
  };

  // Notifies frontend that the server process errored out
  message ProcessError {
    string message = 1;
  };
  
  // Notifies frontend that server process has ended
  message ProcessEnded {
  };

  // Buttplug protocol log message from server process
  message ButtplugLog {
    string message = 1;
  };

  // Notification that a client has connected to the server process
  message ClientConnected {
    string client_name = 1;
  };

  // Notification that a client has disconnected from the server
  // process.
  message ClientDisconnected {
  };

  // Notification that the server has connected to a device.
  message DeviceConnected {
    string device_name = 1;
    uint32 device_id = 2;
  };

  // Notification that the server has disconnected from a device.
  message DeviceDisconnected {
    uint32 device_id = 1;
  };
  
  message SimulatedDeviceMsgOut {
    string device_ident = 1;
    string json_msg = 2;
  }
  
  oneof msg {
    ProcessStarted process_started = 1;
    ProcessError process_error = 2;
    ProcessEnded process_ended = 3;
    ProcessLog process_log = 4;
    ButtplugLog buttplug_log = 5;
    ClientConnected client_connected = 6;
    ClientDisconnected client_disconnected = 7;
    DeviceConnected device_connected = 8;
    DeviceDisconnected device_disconnected = 9;
    SimulatedDeviceMsgOut simulated_device_msg_out = 10;
  };
}
